Delete client/vendor is done